fix: change line-height and letter-spacing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -108,91 +108,91 @@
 @layer base {
   /* Headings */
   .h1 {
-    @apply text-3xl font-bold leading-[1.6rem] tracking-[0.02rem];
+    @apply text-3xl font-bold leading-[1.45] tracking-[-0.02rem];
   }
   .h1-semibold {
-    @apply text-3xl font-semibold leading-[1.6rem] tracking-[0.02rem];
+    @apply text-3xl font-semibold leading-[1.45] tracking-[-0.02rem];
   }
   .h1-regular {
-    @apply text-3xl font-normal leading-[1.6rem] tracking-[0.02rem];
+    @apply text-3xl font-normal leading-[1.45] tracking-[-0.02rem];
   }
 
   .h2 {
-    @apply text-2xl font-bold leading-[1.6rem] tracking-[0.02rem];
+    @apply text-2xl font-bold leading-[1.45] tracking-[-0.02rem];
   }
   .h2-regular {
-    @apply text-2xl font-normal leading-[1.6rem] tracking-[0.02rem];
+    @apply text-2xl font-normal leading-[1.45] tracking-[-0.02rem];
   }
   .h2-semibold {
-    @apply text-2xl font-semibold leading-[1.6rem] tracking-[0.02rem];
+    @apply text-2xl font-semibold leading-[1.45] tracking-[-0.02rem];
   }
 
   .h3 {
-    @apply text-[1.375rem] font-bold leading-[1.6rem] tracking-[0.02rem];
+    @apply text-[1.375rem] font-bold leading-[1.45] tracking-[-0.02rem];
   }
   .h3-semibold {
-    @apply text-[1.375rem] font-semibold leading-[1.6rem] tracking-[0.02rem];
+    @apply text-[1.375rem] font-semibold leading-[1.45] tracking-[-0.02rem];
   }
   .h3-regular {
-    @apply text-[1.375rem] font-normal leading-[1.6rem] tracking-[0.02rem];
+    @apply text-[1.375rem] font-normal leading-[1.45] tracking-[-0.02rem];
   }
 
   /* Titles */
   .title1 {
-    @apply text-xl font-bold leading-[1.6rem] tracking-[0.02rem];
+    @apply text-xl font-bold leading-[1.45] tracking-[-0.02rem];
   }
   .title1-semibold {
-    @apply text-xl font-semibold leading-[1.6rem] tracking-[0.02rem];
+    @apply text-xl font-semibold leading-[1.45] tracking-[-0.02rem];
   }
   .title1-regular {
-    @apply text-xl font-normal leading-[1.6rem] tracking-[0.02rem];
+    @apply text-xl font-normal leading-[1.45] tracking-[-0.02rem];
   }
 
   .title2 {
-    @apply text-lg font-bold leading-[1.6rem] tracking-[0.02rem];
+    @apply text-lg font-bold leading-[1.45] tracking-[-0.02rem];
   }
   .title2-semibold {
-    @apply text-lg font-semibold leading-[1.6rem] tracking-[0.02rem];
+    @apply text-lg font-semibold leading-[1.45] tracking-[-0.02rem];
   }
   .title2-regular {
-    @apply text-lg font-normal leading-[1.6rem] tracking-[0.02rem];
+    @apply text-lg font-normal leading-[1.45] tracking-[-0.02rem];
   }
 
   .title3 {
-    @apply text-base font-bold leading-[1.6rem] tracking-[0.02rem];
+    @apply text-base font-bold leading-[1.45] tracking-[-0.02rem];
   }
   .title3-semibold {
-    @apply text-base font-semibold leading-[1.6rem] tracking-[0.02rem];
+    @apply text-base font-semibold leading-[1.45] tracking-[-0.02rem];
   }
   .title3-regular {
-    @apply text-base font-normal leading-[1.6rem] tracking-[0.02rem];
+    @apply text-base font-normal leading-[1.45] tracking-[-0.02rem];
   }
 
   /* Body text */
   .body1 {
-    @apply text-sm font-bold leading-[1.6rem] tracking-[0.02rem];
+    @apply text-sm font-bold leading-[1.45] tracking-[-0.02rem];
   }
   .body1-semibold {
-    @apply text-sm font-semibold leading-[1.6rem] tracking-[0.02rem];
+    @apply text-sm font-semibold leading-[1.45] tracking-[-0.02rem];
   }
   .body1-medium {
-    @apply text-sm font-medium leading-[1.6rem] tracking-[0.02rem];
+    @apply text-sm font-medium leading-[1.45] tracking-[-0.02rem];
   }
   .body1-regular {
-    @apply text-sm font-normal leading-[1.6rem] tracking-[0.02rem];
+    @apply text-sm font-normal leading-[1.45] tracking-[-0.02rem];
   }
 
   .body2 {
-    @apply text-[0.8125rem] font-bold leading-[1.6rem] tracking-[0.02rem];
+    @apply text-[0.8125rem] font-bold leading-[1.45] tracking-[-0.02rem];
   }
   .body2-semibold {
-    @apply text-[0.8125rem] font-semibold leading-[1.6rem] tracking-[0.02rem];
+    @apply text-[0.8125rem] font-semibold leading-[1.45] tracking-[-0.02rem];
   }
   .body2-medium {
-    @apply text-[0.8125rem] font-medium leading-[1.6rem] tracking-[0.02rem];
+    @apply text-[0.8125rem] font-medium leading-[1.45] tracking-[-0.02rem];
   }
   .body2-regular {
-    @apply text-[0.8125rem] font-normal leading-[1.6rem] tracking-[0.02rem];
+    @apply text-[0.8125rem] font-normal leading-[1.45] tracking-[-0.02rem];
   }
 
   .body3 {
